<resources>
    <string name="app_name">CIS350RecipeApp</string>
    <string name="home">Home</string>
    <string name="favorites">favorites</string>
    <string name="stock">stock</string>
    <string name="recents">recents</string>
    <string name="settings">settings</string>
    <string name="stockTitle">Stock</string>
    <string name="add_ingredient">Add Ingredient</string>
    <string name="name_of_ingredient">Name of Ingredient</string>
    <string name="quantity">Quantity</string>
    <string name="in_your_stock">In Your Stock</string>
    <string name="outputstock">outputStock</string>
    <string name="add">ADD</string>
    <string name="settings1">Settings</string>
    <string name="name">Name:</string>
    <string name="john_jane_doe">John/Jane Doe</string>
    <string name="textviewstock">textViewStock</string>
    <string name="save">SAVE</string>
    <string name="recipe">recipe</string>
    <string name="search">SEARCH</string>
    <string name="pop_sample">POP SAMPLE</string>
    <string name="recipe_name">recipe name</string>
    <string name="change_mode">CHANGE MODE</string>

</resources>
