<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".StockPg">

    <TextView
            android:text="@string/stockTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/stockTitleTextView" android:textSize="30sp"
            app:layout_constraintTop_toTopOf="parent" android:layout_marginTop="9dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="167dp"
            android:layout_marginStart="167dp"/>
    <TextView
            android:text="@string/add_ingredient"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/addIngredientTitleTextView"
            app:layout_constraintTop_toTopOf="parent" android:layout_marginTop="85dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="15dp"
            android:layout_marginStart="15dp" android:textSize="18sp"/>
    <Button
            android:text="ADD"
            android:layout_width="55dp"
            android:layout_height="38dp"
            android:id="@+id/addToStockBtn"
            app:layout_constraintTop_toTopOf="parent" android:layout_marginTop="117dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="320dp"
            android:layout_marginStart="320dp" android:textColorLink="#395E31" android:textColor="#4C6B42"/>
    <Button
            android:text="@string/home"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/stockBackHomeBtn" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="3dp" android:layout_marginStart="3dp" app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="2dp"/>
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:text="@string/name_of_ingredient"
            android:ems="10"
            android:id="@+id/nameOfIngredientEditText" android:textSize="12sp" app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="117dp" android:layout_marginEnd="99dp" android:layout_marginRight="99dp"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="168dp" android:layout_marginStart="168dp" android:autofillHints=""
            tools:targetApi="o"/>
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:text="@string/quantity"
            android:ems="10"
            android:id="@+id/quantityEditText"
            android:textSize="12sp" app:layout_constraintTop_toTopOf="parent" android:layout_marginTop="117dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="15dp"
            android:layout_marginStart="15dp" android:autofillHints="" tools:targetApi="o"/>
    <TextView
            android:text="@string/in_your_stock"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/inYourStockTextView" android:textSize="18sp"
            app:layout_constraintTop_toTopOf="parent" android:layout_marginTop="172dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="12dp"
            android:layout_marginStart="12dp"/>
    <ScrollView
            android:layout_width="376dp"
            android:layout_height="506dp" app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="204dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="16dp" android:layout_marginStart="16dp">
        <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content"
                      android:orientation="vertical">
            <TextView
                    android:text="@string/outputstock"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" android:id="@+id/outputStockTextView"/>
        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>