<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".SettingsPg">

    <Button
            android:text="@string/home"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/settingsBackHomeBtn" app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
    />
    <TextView
            android:text="@string/settings1"
            android:layout_width="115dp"
            android:layout_height="41dp"
            android:id="@+id/settingsTitleTextView" android:textSize="30sp"
            app:layout_constraintTop_toTopOf="parent" android:layout_marginTop="4dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="148dp"
            android:layout_marginStart="148dp"/>
    <Button
            android:text="@string/change_mode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/saveSettingsBtn" android:textSize="12sp"
            app:layout_constraintTop_toTopOf="parent" android:layout_marginTop="100dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="140dp"
            android:layout_marginStart="140dp"/>
</androidx.constraintlayout.widget.ConstraintLayout>